<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.papeleraNota">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/papeleraTitulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/titlePapelera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/titulo"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/contenidoPapelera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePapelera"></TextView>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRecuperar"
            android:onClick="restaurarNota"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_weight="2"></Button>

        <Button
            android:id="@+id/btnEliminar"
            android:text="@string/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminarNota"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_weight="2"></Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>